Fix: stretched images on blog

--- a/blog/static/blog/blog.css
+++ b/blog/static/blog/blog.css
@@ -30,3 +30,15 @@
 .blog-buttons {
     margin: 20px 0;
 }
+
+/* https://stackoverflow.com/questions/54467992/bulma-scale-image-to-container */
+.is-height-300 {
+    height: 300px;
+}
+
+.image img {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+}
